@@ -80,7 +80,8 @@ class CFOptParser(optparse.OptionParser):
         """Variable option."""
 
         self.__var()
-        self.add_option("-c","--clip",metavar='VAR',type="choice",dest='clip',choices=['thk','topg','usurf'],help="display variable only where ['thk','topg','usurf']>0.")
+        self.add_option("-c","--clip",metavar='VAR',type="choice",dest='clip',choices=['thk','topg','usurf','is'],help="display variable only where ['thk','topg','usurf','is']>0.")
+        self.add_option("-i","--illuminate",metavar='VAR',type="choice",dest='illuminate',choices=['thk','topg','usurf','is'],help="illuminate surface using gradient of ['thk','topg','usurf','is']")
         self.add_option("--land",action="store_true", dest="land",default=False,help="Indicate area above SL")
         try:
             self.add_option("--colourmap",type="string",dest="colourmap",help="name of GMT cpt file to be used (autogenerate one when set to None)")
@@ -95,7 +96,7 @@ class CFOptParser(optparse.OptionParser):
         """Spot options."""
 
         self.__var()
-        self.add_option("-i","--ij",dest='ij',metavar="I J",type="int",nargs=2,action='append',help="node to be plotted (this option can be used more than once)")
+        self.add_option("--ij",dest='ij',metavar="I J",type="int",nargs=2,action='append',help="node to be plotted (this option can be used more than once)")
 
     def profile_file(self):
         """Options for profile files."""
